<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nlte.guessnumber.MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:text="@string/title"/>
    <TextView
        android:id="@+id/tv_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_alignStart="@id/tv_title"
        android:layout_alignLeft="@id/tv_title"
        android:textSize="12sp"
        android:text="@string/_0_100_0_100"/>
    6<EditText
        android:id="@+id/et_input_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_below="@id/tv_sub_title"
        android:layout_alignStart="@id/tv_sub_title"
        android:layout_alignLeft="@id/tv_sub_title"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/tv_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_input_number"
        android:layout_alignStart="@id/tv_sub_title"
        android:layout_alignLeft="@id/tv_sub_title"
        android:layout_marginTop="5dp"
        android:hint="@string/answer"/>
    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_below="@id/tv_answer"
        android:layout_alignStart="@id/tv_sub_title"
        android:layout_alignLeft="@id/tv_sub_title"
        android:layout_marginTop="5dp"/>
    <Button
        android:id="@+id/btn_change_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_number"
        android:layout_below="@id/tv_answer"
        android:layout_toEndOf="@id/btn_submit"
        android:layout_toRightOf="@id/btn_submit"
        android:layout_marginTop="5dp"/>
</RelativeLayout>
